--- a/css/styles.css
+++ b/css/styles.css
@@ -3,3 +3,87 @@
     --main-color: #626262;
     --add-color: #B4AD9E;
 }
+body {
+    font-family: Playfair Display;
+}
+h1,
+h2,
+h3,
+h4,
+p {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+ul {
+    margin-top: 0;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+.list {
+    list-style: none;
+    padding: 0;
+}
+.link {
+    text-decoration: none;
+}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.conteiner {
+    width: 936px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.header {
+    padding-top: 71px;
+    padding-bottom: 92px;
+}
+.nav-link {
+    color: #7d7d7d;
+    font-size: 14px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.main-content {
+    padding-bottom: 66px;
+}
+.main-content-subtitle {
+    color: var(--add-color, gray);
+    font-family: Ubuntu;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+.main-content-item-title {
+    color: var(--main-color);
+    font-size: 30px;
+    font-weight: 400;
+}
+.main-content-item-text {
+    color: var(--main-color);
+    font-size: 14px;
+}
+.main-content-btn {
+    color: var(--main-color);
+    font-family: inherit;
+    font-size: 14px;
+}
+.main-content-btn:hover,
+.main-content-btn:focus {
+    background-color: var(--accent-color);
+    color: white;
+    cursor: pointer;
+}
