--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ img {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-.conteiner {
+.container {
     width: 936px;
     margin: 0 auto;
     padding: 0 15px;
@@ -52,11 +52,19 @@ img {
     padding-top: 71px;
     padding-bottom: 92px;
 }
+.nav-list {
+    display: flex;
+    justify-content: space-around;
+}
 .nav-link {
     color: #7d7d7d;
     font-size: 14px;
     text-decoration: none;
     text-transform: uppercase;
+}
+.nav-link:hover, 
+.nav-link:focus {
+    color: var(--accent-color);
 }
 .main-content {
     padding-bottom: 66px;
