--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,10 @@ img {
 .main-content-item:nth-child(odd) {
     margin-right: 65px;
 }
+.main-content-item:nth-child(n + 3) 
+.main-content-img {
+    margin-bottom: 32px;
+}
 .main-content-img {
     margin-bottom: 62px;
 }
@@ -92,13 +96,11 @@ img {
     font-family: Ubuntu;
     font-size: 14px;
     text-transform: uppercase;
-    margin-bottom: 32px;
 }
 .main-content-item-title {
     color: var(--main-color);
     font-size: 30px;
     font-weight: 400;
-    margin-bottom: 40px;
 }
 .main-content-item-text {
     color: var(--main-color);
