--- a/css/styles.css
+++ b/css/styles.css
@@ -73,23 +73,11 @@ img {
 .main-content-list {
     display: flex;
     flex-wrap: wrap;
+    column-gap: 65px;
+    row-gap: 130px;
 }
 .main-content-item {
     width: 420px;
-    margin-bottom: 130px;
-}
-.main-content-item:nth-child(n+5) {
-    margin-bottom: 0;
-}
-.main-content-item:nth-child(odd) {
-    margin-right: 65px;
-}
-.main-content-item:nth-child(n + 3) 
-.main-content-img {
-    margin-bottom: 32px;
-}
-.main-content-img {
-    margin-bottom: 62px;
 }
 .main-content-subtitle {
     color: var(--add-color, gray);
