--- a/css/styles.css
+++ b/css/styles.css
@@ -62,6 +62,7 @@ img {
     font-size: 14px;
     text-decoration: none;
     text-transform: uppercase;
+    transition: color 250ms ease-in;
 }
 .nav-link:hover, 
 .nav-link:focus {
@@ -104,6 +105,8 @@ img {
     display: block;
     margin-right: auto;
     margin-left: auto;
+    transition: background-color 250ms ease-in, 
+    color 250ms ease-in;
 }
 .main-content-btn:hover,
 .main-content-btn:focus {
